Add badges with tooltips

--- a/presentation/components/src/presentation-components/instance-filter-builder/PresentationInstanceFilterBuilder.scss
+++ b/presentation/components/src/presentation-components/instance-filter-builder/PresentationInstanceFilterBuilder.scss
@@ -2,33 +2,48 @@
 * Copyright (c) Bentley Systems, Incorporated. All rights reserved.
 * See LICENSE.md in the project root for license terms and full copyright notice.
 *--------------------------------------------------------------------------------------------*/
-.propertyItemLine{
+.property-item-line{
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: minmax(calc(50%), auto) minmax(auto, calc(50%));
   align-items: center;
 
-  .propertyBadgeContainer {
-    margin-left: auto;
+  .property-badge-container {
+    max-width: calc(100%);
+    justify-self: end;
 
-    .tooltipCategory{
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      .propertyCategoryLabelBadge, .iui-badge {
-          vertical-align: middle;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          padding: 1px 6px;
-          text-transform: none;
-        }
+    .badge {
+      max-width: calc(100%);
+      display: inline-block;
+
+      .iui-badge, .property-category-badge {
+        max-width: calc(100%);
+        vertical-align: middle;
+        box-sizing: border-box;
+        padding: 1px 6px;
+        text-transform: none;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        direction: rtl;
+      }
     }
   }
 
-
-  .propertyDiplayLabel {
+  .property-display-label {
     overflow: hidden;
     text-overflow: ellipsis;
   }
 
+}
+
+.tooltip-content-header{
+  text-align: left;
+}
+
+.tooltip-content-data {
+
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  word-break: break-all;
+  text-align: left;
 }
