Presentation: Navigation property editing (#4388)
* Initial navigation property editor implementation

* Finalize navigation property editor implementation

* rush update

* rush extract-api

* rush change

* Localize select messages

* Fix unit test

* Add removed span element

* Update presentation/components/src/test/instance-filter-builder/PresentationInstanceFilterBuilder.test.tsx

Co-authored-by: Grigas <35135765+grigasp@users.noreply.github.com>

* PR fixes

* Fix tests

* Refactor NavigationPropertyEditorContext

* Fix hasFocus implementation

Co-authored-by: Grigas <35135765+grigasp@users.noreply.github.com>

--- a/ui/components-react/src/components-react/properties/renderers/PropertyView.scss
+++ b/ui/components-react/src/components-react/properties/renderers/PropertyView.scss
@@ -55,11 +55,9 @@ $text-font-color: $buic-text-color;
 
 .components-property-record-value {
   @include record-cell;
-  overflow: hidden;
 
-  span {
+  & > span {
     white-space: nowrap;
-    overflow: hidden;
     text-overflow: ellipsis;
     width: 100%;
   }
