--- a/ui/core-react/src/core-react/style/themecolors.scss
+++ b/ui/core-react/src/core-react/style/themecolors.scss
@@ -124,3 +124,6 @@ $buic-accessory-warning-tint:             var(--buic-accessory-warning-tint);
 
 /** Widget Opacity */
 $buic-widget-opacity:                     var(--buic-widget-opacity, 0.90);
+
+/** Toolbar Opacity */
+$buic-toolbar-opacity:                     var(--buic-toolbar-opacity, 0.50);
