Import using relative paths

--- a/ui/core-react/src/core-react/autosuggest/AutoSuggest.scss
+++ b/ui/core-react/src/core-react/autosuggest/AutoSuggest.scss
@@ -3,8 +3,8 @@
 * See LICENSE.md in the project root for license terms and full copyright notice.
 *--------------------------------------------------------------------------------------------*/
 @import "../scrollbar";
-@import "~@itwin/core-react/lib/cjs/core-react/inputs/variables";
-@import "~@itwin/core-react/lib/cjs/core-react/style/variables";
+@import "../inputs/variables";
+@import "../style/variables";
 @import "~@itwin/itwinui-css/scss/inputs/input";
 @import "~@itwin/itwinui-css/scss/style/typography";
 
