--- a/ui/core-react/src/core-react/listbox/Listbox.scss
+++ b/ui/core-react/src/core-react/listbox/Listbox.scss
@@ -2,7 +2,7 @@
 * Copyright (c) Bentley Systems, Incorporated. All rights reserved.
 * See LICENSE.md in the project root for license terms and full copyright notice.
 *--------------------------------------------------------------------------------------------*/
-@import "~@itwin/core-react/lib/cjs/core-react/index";
+@import "../index";
 
 $uicore-list-item-height: $uicore-baseline * 2; ///  22px; /// ~1.618;
 
