Change core-dialog-hidden class so that modeless dialogs are compatible with iTwinUI components.

--- a/ui/core-react/src/core-react/dialog/Dialog.scss
+++ b/ui/core-react/src/core-react/dialog/Dialog.scss
@@ -34,8 +34,9 @@
   }
 
   &.core-dialog-hidden {
-    width: 0;
-    height: 0;
+    background-color: transparent;
+    pointer-events: none;
+    &>*{pointer-events: all;}
   }
 
   .core-dialog-container {
