--- a/ui/core-react/src/core-react/dialog/Dialog.scss
+++ b/ui/core-react/src/core-react/dialog/Dialog.scss
@@ -36,7 +36,10 @@
   &.core-dialog-hidden {
     background-color: transparent;
     pointer-events: none;
-    &>*{pointer-events: all;}
+
+    & > * {
+      pointer-events: all;
+    }
   }
 
   .core-dialog-container {
