--- a/docs/config/layouts/styles/header.css
+++ b/docs/config/layouts/styles/header.css
@@ -192,10 +192,8 @@ header #search-component input[type="search"]::placeholder {
 .search-trigger {
   width: 15px;
   right: 12px;
-  top: 15px;
+  top: calc(50% - 12px);
 }
-
-
 
 .search-container-active .search-trigger {
   display: none;
@@ -220,14 +218,11 @@ header #search-component input[type="search"]::placeholder {
   }
 
   body.cooked {
-    overflow: hidden;
+    /* overflow: hidden; */
     height: 100%;
   }
 
-  html.cooked {
-    position: static;
-    overflow: hidden;
-  }
+
 
   main>section {
     padding: 20px 0 5px 0;
@@ -241,18 +236,12 @@ header #search-component input[type="search"]::placeholder {
 
   #main-nav.cooked {
     background: var(--itwin-gradient);
-
-
     width: 100%;
-    height: 100%;
-
-    padding-left: 20px;
-    padding-top: 10px;
-
+    height: 150px;
+    padding-left: 27px;
+    padding-top: 20px;
     display: -webkit-box;
-
     display: -ms-flexbox;
-
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -262,7 +251,6 @@ header #search-component input[type="search"]::placeholder {
     -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: flex-start;
-
     position: fixed;
     top: var(--header-nav-height);
     left: 0;
@@ -270,7 +258,8 @@ header #search-component input[type="search"]::placeholder {
   }
 
   #main-nav.cooked a {
-    font-size: 16px;
+    font-size: 21px;
+    line-height: 35px;
   }
 
   #burger-nav {
@@ -298,11 +287,4 @@ header #search-component input[type="search"]::placeholder {
     margin: 0;
   }
 
-  /* header #search-form input[type="search"] {
-    display: none;
-  }
-
-  header #search-form input[type="search"]::placeholder {
-    color: transparent;
-  } */
 }
