--- a/ui/appui-layout-react/src/appui-layout-react/widget-panels/Panel.scss
+++ b/ui/appui-layout-react/src/appui-layout-react/widget-panels/Panel.scss
@@ -81,7 +81,7 @@
 
       >.nz-grip {
         right: 0;
-        transform: translate(50%, -50%);
+        transform: translate(0, -50%);
       }
     }
 
@@ -113,7 +113,7 @@
 
       >.nz-grip {
         left: 0;
-        transform: translate(-50%, -50%);
+        transform: translate(0, -50%);
       }
     }
 
@@ -167,7 +167,7 @@
 
       >.nz-grip {
         bottom: 0;
-        transform: translate(-50%, 50%);
+        transform: translate(-50%, 0);
       }
     }
 
@@ -207,7 +207,7 @@
 
       >.nz-grip {
         top: 0;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, 0);
       }
     }
 
