--- a/docs/config/layouts/styles/home.css
+++ b/docs/config/layouts/styles/home.css
@@ -344,7 +344,7 @@ ul.joined-blocklist li img {
 
 ul.next-steps {
   list-style-type: none;
-  padding: 0;
+  padding: 0 10px;
   margin: 80px 0 14px 0;
   width: 100%;
   display: -webkit-box;
@@ -788,6 +788,7 @@ section#what-is-itwin .feature-list p {
 
   ul.joined-blocklist li:last-of-type {
     padding: 0;
+    border-right: 1px solid #dce0e3;
   }
 
   ul.joined-blocklist li:last-of-type a {
@@ -840,7 +841,6 @@ section#what-is-itwin .feature-list p {
 
   section#what-is-itwin h1 {
     margin-top: 0px;
-    background-size: 75%;
   }
 
   section#what-is-itwin .itwin-description {
