--- a/presentation/components/src/presentation-components/tree/controlled/PresentationTreeNodeRenderer.scss
+++ b/presentation/components/src/presentation-components/tree/controlled/PresentationTreeNodeRenderer.scss
@@ -3,6 +3,7 @@
 * See LICENSE.md in the project root for license terms and full copyright notice.
 *--------------------------------------------------------------------------------------------*/
 @import "~@itwin/itwinui-css/scss/style/theme";
+@import "~@itwin/core-react/lib/cjs/core-react/style/themecolors";
 
 .presentation-components-info-node {
   @include themed {
@@ -14,7 +15,7 @@
   .presentation-components-node-action-buttons {
     visibility: hidden;
     position: sticky;
-    background-color: inherit;
+    background-color: $buic-background-control;
     right: 0;
     display: flex;
 
@@ -26,6 +27,7 @@
 
   &:hover > .presentation-components-node-action-buttons {
     visibility: visible;
+    background-color: inherit;
   }
 
   .presentation-components-node-action-buttons.filtered {
