Presentation: Add API to enable hierarchy levels filtering in tree (#4915)
* Add PresentationTreeNodeItem type

* Initial filterable tree branches implementation

* Use PresentationInstanceFilterDialog for building node filter

* Add tests

* Disable hierarchy level filtering in FilteredNodesProvider

* Enable hierarchy level filtering in test-app

* extract-api

* Do not render rule group operator for one rule

* Render info message when filtered level does not have nodes

* Expand hierarchy level when filter applied

* Add background color to node action buttons

* Clean up PresentationTreeRenderer

* rush change

* Remove duplicate test

* Rename tree action button handlers

* Move child instances descriptor to PresentationTreeNodeItem

* Move presentation tree node item to separate file

* Add PresentationInfoTreeNodeItem

* extract-api

* Update common/changes/@itwin/components-react/presentation-tree_branches_filtering_2023-01-12-13-01.json

Co-authored-by: Grigas <35135765+grigasp@users.noreply.github.com>

* Pass complex filter to presentation manager

* Use getNodeDescriptor to get descriptor for hierarchy level filtering

* rush change

* Fix test

* Fix presentation-full-stack-tests

* Update snapshots

* rush change

Co-authored-by: Grigas <35135765+grigasp@users.noreply.github.com>

--- a/presentation/components/src/presentation-components/tree/controlled/PresentationTreeNodeRenderer.scss
+++ b/presentation/components/src/presentation-components/tree/controlled/PresentationTreeNodeRenderer.scss
@@ -3,19 +3,19 @@
 * See LICENSE.md in the project root for license terms and full copyright notice.
 *--------------------------------------------------------------------------------------------*/
 @import "~@itwin/itwinui-css/scss/style/theme";
+@import "~@itwin/core-react/lib/cjs/core-react/style/themecolors";
 
-.presentation-components-muted-node{
+.presentation-components-info-node {
   @include themed {
     color: t(iui-text-color-muted);
   }
 }
 
 .presentation-components-node {
-
-  .presentation-components-filter-action-button {
+  .presentation-components-node-action-buttons {
     visibility: hidden;
     position: sticky;
-    background-color: inherit;
+    background-color: $buic-background-control;
     right: 0;
     display: flex;
 
@@ -25,7 +25,12 @@
       }
     }
 
-  &:hover > .presentation-components-filter-action-button {
+  &:hover > .presentation-components-node-action-buttons {
+    visibility: visible;
+    background-color: inherit;
+  }
+
+  .presentation-components-node-action-buttons.filtered {
     visibility: visible;
   }
 }
