--- a/presentation/components/src/presentation-components/instance-filter-builder/PresentationInstanceFilterDialog.scss
+++ b/presentation/components/src/presentation-components/instance-filter-builder/PresentationInstanceFilterDialog.scss
@@ -5,6 +5,8 @@
 @import "~@itwin/itwinui-css/scss/style/theme";
 
 .presentation-instance-filter-dialog {
+  min-width: 50vw;
+
   .presentation-instance-filter-title {
     margin-bottom: 0;
     padding: 6px;
@@ -20,7 +22,7 @@
     }
   }
 
-  .presentation-instance-filter-dialog-bottom-container{
+  .presentation-instance-filter-dialog-bottom-container {
     display: grid;
     grid-template-columns: 50% 50%;
     align-items: center;
@@ -33,5 +35,12 @@
     .presentation-instance-filter-button-bar {
       margin-top: 0;
     }
+  }
+
+  .presentation-instance-filter-dialog-progress {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 11px 0;
   }
 }
